--- a/.github/workflows/relase_action.yml
+++ b/.github/workflows/relase_action.yml
@@ -16,5 +16,5 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
         artifacts: "release.zip"
-        token: ${{ secrets.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 }}
-        #token: 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
+        #token: ${{ secrets.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 }}
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
