--- a/.github/workflows/relase_action.yml
+++ b/.github/workflows/relase_action.yml
@@ -2,9 +2,11 @@ name: Create Archive
 on: [push]
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubun  tu-latest
     steps:
     - uses: actions/checkout@main
+      with: 
+        fetch-depth: 0
     - name: Archive Release
       uses: thedoctor0/zip-release@main
       with:
