--- a/.github/workflows/relase_action.yml
+++ b/.github/workflows/relase_action.yml
@@ -1,5 +1,9 @@
 name: Create Archive
-on: [push]
+#on: [push]
+on: 
+  push: 
+    tags: 
+      - '*' 
 jobs:
   build:
     runs-on: ubun  tu-latest
