--- a/.github/workflows/test_archive.yml
+++ b/.github/workflows/test_archive.yml
@@ -1,9 +1,9 @@
 name: Create Archive
-on: [push]
-#on: 
-#  push: 
-#    tags: 
-#      - '*' 
+#on: [push]
+on: 
+  push: 
+    tags: 
+      - '*' 
 jobs:
   build:
     runs-on: ubuntu-latest
