--- a/.github/workflows/zip_test.yml
+++ b/.github/workflows/zip_test.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@main
+    - uses: actions/checkout@v0.0.2
       with: 
         fetch-depth: 0
     - name: Archive Release
