--- a/.github/workflows/zip_test.yml
+++ b/.github/workflows/zip_test.yml
@@ -1,10 +1,13 @@
 name: Create Archive
-on: [push]
+on: 
+  push:
+    tags:
+      - v*
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v0.0.2
+    - uses: actions/checkout@main
       with: 
         fetch-depth: 0
     - name: Archive Release
