--- a/.github/workflows/zip_test.yml
+++ b/.github/workflows/zip_test.yml
@@ -1,13 +1,12 @@
 name: Create Archive
-on: 
-  push:
-    tags:
-      - v*
+on:
+  release:
+    types: [published]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@main
+    - uses: actions/checkout@v0
       with: 
         fetch-depth: 0
     - name: Archive Release
