--- a/.github/workflows/zip_test.yml
+++ b/.github/workflows/zip_test.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v0
+    - uses: actions/checkout@main
       with: 
         fetch-depth: 0
     - name: Archive Release
