--- a/.github/workflows/zip_test.yml
+++ b/.github/workflows/zip_test.yml
@@ -6,9 +6,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-      with: 
-        fetch-depth: 0
+    - uses: actions/checkout@main
+      #with: 
+        #fetch-depth: 0
     - name: Archive Release
       uses: thedoctor0/zip-release@main
       with:
