--- a/.github/workflows/zip_test.yml
+++ b/.github/workflows/zip_test.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         type: 'zip'
         filename: 'release.zip'
-        exclusions: '*.git* /*node_modules/* .editorconfig'
+        exclusions: '*.git* /*node_modules/* .editorconfig install.sh README*'
 
     - name: Upload Release
       uses: ncipollo/release-action@v1
