--- a/.github/workflows/zip_test.yml
+++ b/.github/workflows/zip_test.yml
@@ -9,8 +9,14 @@ jobs:
     - uses: actions/checkout@v2
       with: 
         fetch-depth: 0
-    - name: Archive Release
+    - name: Archive Release 1
       uses: thedoctor0/zip-release@main
+      with:
+        type: 'zip'
+        filename: 'release.zip'
+        exclusions: '*.git* /*node_modules/* .editorconfig install.sh README*'
+    - name: Archive Release 2  
+      uses: thedoctor0/zip-release@release.zip
       with:
         type: 'zip'
         filename: 'release.zip'
