--- a/.github/workflows/zip_test.yml
+++ b/.github/workflows/zip_test.yml
@@ -1,4 +1,4 @@
-name: Create Archive
+name: create release
 on:
   release:
     types: [published]
@@ -15,6 +15,12 @@ jobs:
         type: 'zip'
         filename: 'release.zip'
         exclusions: '*.git* /*node_modules/* .editorconfig install.sh README*'
+        
+    - uses: actions/upload-artifact@v1
+      with:
+        name: 'release.zip'
+        path: ${{ github.workspace }}/result.zip
+        
     - name: Upload Release
       uses: ncipollo/release-action@v1
       with:
