--- a/.github/workflows/zip_test.yml
+++ b/.github/workflows/zip_test.yml
@@ -12,18 +12,12 @@ jobs:
     - name: Archive Release 1
       uses: thedoctor0/zip-release@main
       with:
-        type: 'zip'
-        filename: 'release.zip'
+        type: 'tar' 
+        filename: 'release.tar.gz'
         exclusions: '*.git* /*node_modules/* .editorconfig install.sh README*'
-        
-   # - uses: actions/upload-artifact@v1
-   #   with:
-   #     name: 'release.zip'
-   #     path: ${{ github.workspace }}/result.zip
-        
     - name: Upload Release
       uses: ncipollo/release-action@v1
       with:
-        artifacts: "release.zip"
+        artifacts: "release.tar.gz"
         token: ${{ secrets.GITHUB_TOKEN }}
         allowUpdates: "true"
