--- a/.github/workflows/zip_test.yml
+++ b/.github/workflows/zip_test.yml
@@ -12,12 +12,12 @@ jobs:
     - name: Archive Release 1
       uses: thedoctor0/zip-release@main
       with:
-        type: 'tar' 
-        filename: 'release.tar.gz'
+        type: 'zip' 
+        filename: 'release.zip'
         exclusions: '*.git* /*node_modules/* .editorconfig install.sh README*'
     - name: Upload Release
       uses: ncipollo/release-action@v1
       with:
-        artifacts: "release.tar.gz"
+        artifacts: "release.zip"
         token: ${{ secrets.GITHUB_TOKEN }}
         allowUpdates: "true"
