--- a/.github/workflows/zip_test.yml
+++ b/.github/workflows/zip_test.yml
@@ -10,7 +10,7 @@ jobs:
       with: 
         fetch-depth: 0
     - name: Archive Release 1
-      uses: thedoctor0/zip-release@main
+      uses:  PVS-Australia/zip-release@main
       with:
         type: 'zip' 
         filename: 'release.zip'
