--- a/.github/workflows/zip_test.yml
+++ b/.github/workflows/zip_test.yml
@@ -22,7 +22,7 @@ jobs:
         type: ${{ env.TYPE }}
         filename: ${{ env.FILENAME }}
         filename_deploy: ${{ env.FILENAME_DEPLOY }}
-        exclusions: ${{ env.FILENAME }}
+        exclusions: ${{ env.EXCLUSIONS }}
         inclusions: 'trac_util_scripts.zip README* install.sh'
     - name: Upload Release
       uses: ncipollo/release-action@v1
