--- a/.github/workflows/zip_test.yml
+++ b/.github/workflows/zip_test.yml
@@ -4,7 +4,7 @@ env:
   FILENAME: 'install_assets.zip'
   FILENAME_DEPLOY: 'trac_util_scripts.zip'
   EXCLUSIONS: '*.git* /*node_modules/* .editorconfig install.sh README*'
-  INCLUSIONS: 'trac_util_scripts.zip README* install.sh'
+  INCLUSIONS: '${{ env.FILENAME_DEPLOY }} trac_util_scripts.zip README* install.sh'
 
 on:
   release:
@@ -23,7 +23,8 @@ jobs:
         filename: ${{ env.FILENAME }}
         filename_deploy: ${{ env.FILENAME_DEPLOY }}
         exclusions: ${{ env.EXCLUSIONS }}
-        inclusions: 'trac_util_scripts.zip README* install.sh'
+        #inclusions: 'trac_util_scripts.zip README* install.sh' 
+        inclusions: ${{ env.INCLUSIONS }}
     - name: Upload Release
       uses: ncipollo/release-action@v1
       with:
