--- a/.github/workflows/zip_test.yml
+++ b/.github/workflows/zip_test.yml
@@ -1,11 +1,19 @@
 name: create release
 env:
+#  TYPE: 'zip'
+#  FILENAME: 'install_assets.zip'
+#  FILENAME_DEPLOY: 'trac_util_scripts.zip'
+#  EXCLUSIONS: '*.git* /*node_modules/* .editorconfig install.sh README*'
+#  INCLUSIONS: 'trac_util_scripts.zip README* install.sh'
+#  METADATA: ${{ github. }}
   TYPE: 'zip'
-  FILENAME: 'install_assets.zip'
-  FILENAME_DEPLOY: 'trac_util_scripts.zip'
+  FILENAME: '${{ github.event.repository.name }}_${{ github.event.release.tag_name }}.zip'
+  FILENAME_DEPLOY: 'install_assets.zip'
   EXCLUSIONS: '*.git* /*node_modules/* .editorconfig install.sh README*'
-  INCLUSIONS: 'trac_util_scripts.zip README* install.sh'
-  METADATA: ${{ github }}
+  INCLUSIONS: 'install_assets.zip README* install.sh'
+  BRANCH: '${{ github.event.release.target_commitish }}'
+#  This next variable is a hack to see ALL of the DOM of the github variable to help you work out what bits you may need to extract (so even though it is commented out, don't delete!)
+#  GITHUB_CONTEXT: ${{ toJson(github) }}
 
 on:
   release:
