--- a/.github/workflows/zip_test.yml
+++ b/.github/workflows/zip_test.yml
@@ -26,7 +26,7 @@ jobs:
       with: 
         fetch-depth: 0
     - name: Archive Release 1
-      uses:  PVS-Australia/zip-release@main
+      uses:  PVS-Australia/zip-release@${{{ RELEASE_VERSION }}
       with:
         type: ${{ env.TYPE }}
         filename: ${{ env.FILENAME }}
