--- a/.github/workflows/zip_test.yml
+++ b/.github/workflows/zip_test.yml
@@ -14,7 +14,7 @@ env:
   BRANCH: '${{ github.event.release.target_commitish }}'
 #  This next variable is a hack to see ALL of the DOM of the github variable to help you work out what bits you may need to extract (so even though it is commented out, don't delete!)
   #GITHUB_CONTEXT: ${{ toJson(github) }}
-  GITHUB_CONTEXT: ${{ toJson(github.event.release.target_commitish) }}
+  GITHUB_CONTEXT: '${{ toJson(github.event.release.target_commitish) }}'
 
 on:
   release:
@@ -28,7 +28,7 @@ jobs:
         fetch-depth: 0
     - name: Archive Release 1
       #uses:  PVS-Australia/zip-release@main
-      uses:  PVS-Australia/zip-release@${{ env.BRANCH }}
+      uses:  PVS-Australia/zip-release@'${{ github.event.release.target_commitish }}'
       with:
         type: ${{ env.TYPE }}
         filename: ${{ env.FILENAME }}
