--- a/.github/workflows/zip_test.yml
+++ b/.github/workflows/zip_test.yml
@@ -43,3 +43,4 @@ jobs:
         artifacts: ${{ env.FILENAME }}
         token: ${{ secrets.GITHUB_TOKEN }}
         allowUpdates: "true"
+        name: "abc"
