--- a/.github/workflows/zip_test.yml
+++ b/.github/workflows/zip_test.yml
@@ -44,4 +44,4 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         allowUpdates: "true"
         name: '${{ github.event.release.name }}'
-        body: "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb"
+        body: '${{ github.event.release.body }}'
