--- a/.github/workflows/zip_test.yml
+++ b/.github/workflows/zip_test.yml
@@ -45,3 +45,4 @@ jobs:
         allowUpdates: "true"
         name: '${{ github.event.release.name }}'
         body: '${{ github.event.release.body }}'
+        prerelease: '${{ github.event.release.prerelease }}'
