--- a/.github/workflows/zip_test.yml
+++ b/.github/workflows/zip_test.yml
@@ -23,6 +23,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - name: Install package
+      run: |
+        sudo apt-get -y install jq
     - uses: actions/checkout@v3
       with: 
         fetch-depth: 0
